--- a/test_environment_2060.ipynb
+++ b/test_environment_2060.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,8 @@
       "\u001b[42m[ OK ]\u001b[0m matplotlib version 3.7.2 is installed.\n",
       "\u001b[42m[ OK ]\u001b[0m numpy version 1.24.4 is installed.\n",
       "\u001b[42m[ OK ]\u001b[0m sklearn version 1.3.0 is installed.\n",
-      "\u001b[42m[ OK ]\u001b[0m pandas version 2.0.3 is installed.\n"
+      "\u001b[42m[ OK ]\u001b[0m pandas version 2.0.3 is installed.\n",
+      "\u001b[42m[ OK ]\u001b[0m pytest version 7.2.1 is installed.\n"
      ]
     }
    ],
